--- a/index.html
+++ b/index.html
@@ -36,4 +36,4 @@
         <h3> </h3>
    <footer style="background-color: yellow">Адресс: Ул.Кудашева д.105 номер телефона: +6 666 666 66 66 (это тестировочный сайт, не воспринемайте его в серьез и не звоните по номеру)</footer>  
     </body>
-</html
+</html>
